--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
   font-size: var(--size);
   line-height: 1.5;
   margin: 0 auto;
-  padding: 7em 1em 1em 1em;
+  padding: 7em 5% 1em 5%;
   transition: all .3s ease-in;
 }
 
@@ -106,7 +106,7 @@ header {
   position: fixed;
   top:0;
   left:0;
-  padding:.5em 1em;
+  padding:.5em 5%;
   font-size: 1em;
   background-color: var(--bgt);
   width:100%;
