--- a/style.css
+++ b/style.css
@@ -305,6 +305,7 @@ select[disabled] {
   padding: 0.5em 0.7em;
   margin: 0 0.5em 0.5em 0;
   box-shadow: none;
+  font-size: 2em;
 }
 
 /* Use mono font for code elements */
