--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ header {
   position: fixed;
   top:0;
   left:0;
-  padding:.5em 5%;
+  padding:1em 5%;
   font-size: 1em;
   background-color: var(--bgt);
   width:100%;
