--- a/style.css
+++ b/style.css
@@ -350,24 +350,8 @@ summary {
   color: var(--accent);
 }
 
-summary:hover::marker {
+summary:hover::marker, summary:focus::marker {
   color: var(--hover);
-}
-
-@keyframes sweep {
-  0% {
-    opacity: 0;
-    margin-top: -10px
-  }
-
-  100% {
-    opacity: 1;
-    margin-top: 0px
-  }
-}
-
-details[open] summary~* {
-  animation: sweep .5s ease-in-out;
 }
 
 details>summary::after {
